--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,9 +2,10 @@ pandoc: 3.6.3
 pkgdown: 2.1.3
 pkgdown_sha: ~
 articles:
+  selectboost-algorithms: selectboost-algorithms.html
   selectboost-beta: selectboost-beta.html
   simulate-interval-beta: simulate-interval-beta.html
-last_built: 2025-10-23T16:39Z
+last_built: 2025-10-28T00:50Z
 urls:
   reference: https://fbertran.github.io/SelectBoost.beta/reference
   article: https://fbertran.github.io/SelectBoost.beta/articles
