--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: SelectBoost.beta
 Type: Package
 Title: Stability-Selection via Correlated Resampling for Beta-Regression Models
 Version: 0.4.5
-Date: 2025-10-19
+Date: 2025-10-28
 Depends: 
     R (>= 4.0)
 Imports:
@@ -15,6 +15,8 @@ Imports:
     rlang,
     stats
 Suggests:
+    future,
+    future.apply,
     gamlss.lasso,
     ggplot2,
     knitr,
