Description and documentation updates

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Authors@R: c(
 Author: Frederic Bertrand [cre, aut] (<https://orcid.org/0000-0002-0837-8281>)
 Maintainer: Frederic Bertrand <frederic.bertrand@lecnam.net>
 Description: Adds variable-selection functions for Beta regression models
-    (mean submodel) so they can be used within the 'SelectBoost' algorithm.
+    (both mean and phi submodels) so they can be used within the 'SelectBoost' algorithm.
     Includes stepwise 'AIC'/'BIC'/'AICc' on betareg() fits, 'GAMLSS'-based LASSO/Elastic-Net,
     a pure 'glmnet' 'IRLS'-based selector with an optional standardization speedup,
     and C++ helpers for 'IRLS' working steps and precision updates. Also provides
