Code and documentation updates to match CRAN requirements

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: SelectBoost.beta
 Type: Package
 Title: Stability-Selection via Correlated Resampling for Beta-Regression Models
 Version: 0.4.5
-Date: 2025-10-28
+Date: 2025-11-04
 Depends: 
     R (>= 4.0)
 Imports:
@@ -32,19 +32,17 @@ Author: Frederic Bertrand [cre, aut] (<https://orcid.org/0000-0002-0837-8281>)
 Maintainer: Frederic Bertrand <frederic.bertrand@lecnam.net>
 Description: Adds variable-selection functions for Beta regression models
     (both mean and phi submodels) so they can be used within the 'SelectBoost' algorithm.
-    Includes stepwise 'AIC'/'BIC'/'AICc' on betareg() fits, 'GAMLSS'-based LASSO/Elastic-Net,
-    a pure 'glmnet' 'IRLS'-based selector with an optional standardization speedup,
-    and C++ helpers for 'IRLS' working steps and precision updates. Also provides
+    Includes stepwise AIC, BIC, and corrected AIC on betareg() fits, 'gamlss'-based 
+    LASSO/Elastic-Net, a pure 'glmnet' iterative re-weighted least squares-based selector 
+    with an optional standardization speedup, and 'C++' helpers for iterative 
+    re-weighted least squares working steps and precision updates. Also provides
     a fastboost_interval() variant for interval responses, comparison helpers,
-    and a flexible simulator simulation_DATA.beta() for interval-valued data.
-    The 'SelectBoost4Beta' framework was presented by Bertrand and 'Maumy' (2023)
-    at Joint Statistical Meetings 2023 (Toronto, Canada) and 'BioC2023' (Boston,
-    USA), highlighting correlated resampling for Beta-regression variable
-    selection.
+    and a flexible simulator simulation_DATA.beta() for interval-valued data. 
+    For more details see Bertrand and Maumy (2023) <doi:10.7490/f1000research.1119552.1>,
+    <https://hal.science/hal-05352047>, and <https://hal.science/hal-05352056>.
 License: GPL-3
 Encoding: UTF-8
 Classification/MSC: 62H11, 62J12, 62J99
-LazyData: true
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
